# writing-improver

./: .gitignore  =10.0  API_SETUP.md  CLAUDE.md  EXTREME_CODEX_SYSTEM.md  IMPROVEMENT-PLAN.md  Makefile  ORCHESTRATOR_PROMPT.md  PLAN.md  README.md  RESEARCH_COMPLETE.txt  SPEC.md  THE-CONTENT-SYSTEM.md  ULTIMATE_WRITING_SYSTEM.md  claude-project-instructions.md  compress.sh  elite-writing-system.md  fix_openrouter_and_demo.py  kolmogorov-clarity-process.md  kolmogorov-llm-prompts.md  kolmogorov-team-implementation.md  learning-in-public-strategy.md  linkedin-content-system-research.md  pyproject.toml  quick_l1_analysis.py  run_authentic_swarm.py  run_bottom_up_swarm.py  run_codex_orchestrator.py  run_coinbase_analysis_fixed.py  run_coinbase_pipeline.py  run_coinbase_with_search.py  run_comprehensive_coinbase_analysis.py  run_compression_swarm.py  run_enhanced_pipeline.py  run_extreme_codex.py  run_extreme_coinbase_discovery.py  run_extreme_coinbase_local.py  run_fresh_coinbase_analysis.py  run_live_coinbase_analysis.py  run_local_claude_swarm.py  (+7 more)
.github/: pull_request_template.md
config/: distribution.yaml  pipeline.yaml  quality_thresholds.yaml
content/: 01-linkedin-post.md  01-newsletter-stablecoin-issuer-stack.md  01-x-post.md  02-insight-ai-capex-stablecoins.md  03-insight-what-ai-actually-means.md  04-insight-compression-substitution.md  04-skill-compression-guard.md  05-casino-on-mars-three-years-later.md  06-thesis-media-guide.md  06-thesis-process-notes.md  06-thesis-real-media.md  06-thesis-v3-data.md  06-thesis-v4-personal.md  08-coinbase-pipeline-output.md  (+69 more)
(+154 files in other folders)
