[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writing-improver"
version = "0.1.0"
description = "Multi-agent content pipeline with Kolmogorov complexity enforcement"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.42",
    "pyyaml>=6.0",
    "nltk>=3.9",
    "httpx>=0.27",
]

[project.scripts]
writing-improver = "src.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
